--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         function responder(resposta) {
             document.getElementById("resposta").innerText = "Você disse: " + resposta + "!❤️ \n" +
                 "Se você disse sim, eu também gosto de você! 😍\n" +
-                "Se você disse não, tudo bem, eu respeito sua decisão. 😊";
+                "Se você disse não, tudo bem, eu respeito sua decisão(so que n kkk). 😊";
         }
         function fugir() {
             let btn = document.getElementById("noButton");
