--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 </head>
 <body>
     <div class="container">
-        <h2>Quer namorar comigo? 💖</h2>
+        <h2>Quer namorar comigo? ❤️</h2>
         <div class="buttons">
-            <button class="yes" onclick="responder('Sim')">Sim 💕</button>
+            <button class="yes" onclick="responder('Sim')">Sim ❤️</button>
             <button class="no" id="noButton" onmouseover="fugir()">Não 😢</button>
         </div>
         <p id="resposta"></p>
